k8s/pstake/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pstake
  namespace: dev-native
spec:
  replicas: 5
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: pstake
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        quality: release
        role: api-gateway
        sla: high
        tier: gateway
      labels:
        app.kubernetes.io/instance: pstake
        app.kubernetes.io/name: pstake
        app.kubernetes.io/version: '0.1'
    spec:
      imagePullSecrets:
        - name: test-docker-creds
      containers:
      - name: init-genesis
        image: anmol1696/pstake
        imagePullPolicy: Always
        command:
        - bash
        - "-c"
        - |
          [...]
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: "0.5"
            memory: 0.5Gi
        volumeMounts:
        - mountPath: /pstaked
          name: pstaked
        - mountPath: /configs
          name: addresses
      volumes:
      - name: pstaked
        emptyDir: {}
      - name: addresses
        configMap:
          name: test-addresses
