k8s/pstake/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pstake
  namespace: dev-native
spec:
  serviceName: pstake-validator-headless
  replicas: 3
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: pstake
  template:
    metadata:
      annotations:
        quality: release
        role: api-gateway
        sla: high
        tier: gateway
      labels:
        app.kubernetes.io/instance: pstake
        app.kubernetes.io/name: pstake
        app.kubernetes.io/version: '0.1'
    spec:
      imagePullSecrets:
        - name: test-docker-creds
      containers:
      - name: validator
        image: anmol1696/pstake
        imagePullPolicy: Always
        command:
        - bash
        - "-c"
        - |
            pstaked start --home $PSTAKE_DIR
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: "0.5"
            memory: 0.5Gi
        volumeMounts:
        - mountPath: /pstaked
          name: pstaked
        - mountPath: /configs
          name: addresses
      - name: exposer-app
        image: anmol1696/exposer
        imagePullPolicy: Always
        command: ["exposer"]
        resources:
          limits:
            cpu: "0.1"
            memory: "0.1Gi"
          requests:
            cpu: "0.1"
            memory: "0.1Gi"
        volumeMounts:
        - mountPath: /pstaked
          name: pstaked
      volumes:
      - name: pstaked
        emptyDir: {}
      - name: addresses
        configMap:
          name: test-addresses
