k8s/pstake/genesis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pstake-genesis
  labels:
    app.kubernetes.io/name: pstake-genesis
spec:
  clusterIP: None
  ports:
  - name: p2p
    port: 26656
    protocol: TCP
    targetPort: 26656
  - name: rpc
    port: 26657
    protocol: TCP
    targetPort: 26657
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: grpc
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app.kubernetes.io/name: pstake-genesis
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pstake-genesis
  namespace: dev-native
spec:
  serviceName: pstake-genesis
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: pstake
      app.kubernetes.io/name: pstake-genesis
  template:
    metadata:
      annotations:
        quality: release
        role: api-gateway
        sla: high
        tier: gateway
      labels:
        app.kubernetes.io/instance: pstake
        app.kubernetes.io/type: pstake-validator
        app.kubernetes.io/name: pstake-genesis
        app.kubernetes.io/version: '0.1'
    spec:
      imagePullSecrets:
        - name: test-docker-creds
      containers:
      - name: validator
        image: persistenceone/pstake
        imagePullPolicy: Always
        command:
        - bash
        - "-c"
        - |
            pstaked start --home $PSTAKE_DIR
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: "0.5"
            memory: 0.5Gi
        volumeMounts:
        - mountPath: /pstaked
          name: pstaked
        - mountPath: /configs
          name: addresses
      - name: exposer-app
        image: persistenceone/exposer:pstake
        imagePullPolicy: Always
        command: ["exposer"]
        resources:
          limits:
            cpu: "0.1"
            memory: "0.1Gi"
          requests:
            cpu: "0.1"
            memory: "0.1Gi"
        volumeMounts:
        - mountPath: /pstaked
          name: pstaked
      volumes:
      - name: pstaked
        emptyDir: {}
      - name: addresses
        configMap:
          name: test-addresses-pstake
---
