k8s/pstake/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pstake-validator
  namespace: dev-native
spec:
  type: ClusterIP
  ports:
  - name: p2p
    port: 26656
    protocol: TCP
    targetPort: 26656
  - name: rpc
    port: 26657
    protocol: TCP
    targetPort: 26657
  selector:
    app.kubernetes.io/name: pstake
---
apiVersion: v1
kind: Service
metadata:
  name: pstake-validator-headless
  labels:
    app.kubernetes.io/name: pstake-validator-headless
spec:
  clusterIP: None
  ports:
  - name: p2p
    port: 26656
    protocol: TCP
    targetPort: 26656
  - name: rpc
    port: 26657
    protocol: TCP
    targetPort: 26657
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: pstake
---
