k8s/pstake/validator.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pstake-validator
  labels:
    app.kubernetes.io/name: pstake-validator
spec:
  clusterIP: None
  ports:
    - name: p2p
      port: 26656
      protocol: TCP
      targetPort: 26656
    - name: rpc
      port: 26657
      protocol: TCP
      targetPort: 26657
    - name: http
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app.kubernetes.io/name: pstake-validator
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pstake-validator
  namespace: dev-native
spec:
  serviceName: pstake-validator
  replicas: 3
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: pstake
      app.kubernetes.io/name: pstake-validator
  template:
    metadata:
      annotations:
        quality: release
        role: api-gateway
        sla: high
        tier: gateway
      labels:
        app.kubernetes.io/instance: pstake
        app.kubernetes.io/type: pstake-validator
        app.kubernetes.io/name: pstake-validator
        app.kubernetes.io/version: '0.1'
    spec:
      imagePullSecrets:
        - name: test-docker-creds
      containers:
        - name: validator
          image: persistenceone/pstake
          imagePullPolicy: Always
          command:
            - bash
            - "-c"
            - |
              # Starting
              pstaked start --home $PSTAKE_DIR
          lifecycle:
            postStart:
              exec:
                command:
                  - bash
                  - "-c"
                  - |
                    VAL_INDEX=${HOSTNAME##*-}
                    VAL_NAME=$(jq -r ".validators[$VAL_INDEX].name" /configs/validators.json)
                    echo "Validator Index: $VAL_INDEX, Key name: $VAL_NAME"

                    # Wait for the node to be synced
                    max_tries=10
                    while [[ $(pstaked status --home $PSTAKE_DIR 2>&1 | jq ".SyncInfo.catching_up") == true ]]
                    do
                      if [[ max_tries -lt 0 ]]; then echo "Not able to sync with genesis node"; exit 1; fi
                      echo "Still syncing... Sleeping for 15 secs. Tries left $max_tries"
                      ((max_tries--))
                      sleep 30
                    done

                    # Run create validator tx command
                    echo "Running txn for create-validator"
                    pstaked tx staking create-validator --home $PSTAKE_DIR --pubkey=$(pstaked tendermint show-validator --home $PSTAKE_DIR) --moniker $VAL_NAME --amount 5000000000uxprt --keyring-backend="test" --chain-id $CHAIN_ID --from $VAL_NAME --commission-rate="0.10" --commission-max-rate="0.20" --commission-max-change-rate="0.01" --min-self-delegation="1000000" --gas="auto" --gas-adjustment 1.5 --yes > /validator.log
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: "0.5"
              memory: 0.5Gi
          volumeMounts:
            - mountPath: /pstaked
              name: pstaked
            - mountPath: /configs
              name: addresses
        - name: exposer-app
          image: persistenceone/exposer:pstake
          imagePullPolicy: Always
          command: [ "exposer" ]
          resources:
            limits:
              cpu: "0.1"
              memory: "0.1Gi"
            requests:
              cpu: "0.1"
              memory: "0.1Gi"
          volumeMounts:
            - mountPath: /pstaked
              name: pstaked
      volumes:
        - name: pstaked
          emptyDir: { }
        - name: addresses
          configMap:
            name: test-addresses-pstake
---
