k8s/pstake/validator.yml
---
apiVersion: v1
kind: Service
metadata:
  name: pstake-validator
  labels:
    app.kubernetes.io/name: pstake-validator
spec:
  clusterIP: None
  ports:
    - name: p2p
      port: 26656
      protocol: TCP
      targetPort: 26656
    - name: rpc
      port: 26657
      protocol: TCP
      targetPort: 26657
    - name: http
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app.kubernetes.io/name: pstake-validator
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pstake-validator
spec:
  serviceName: pstake-validator
  replicas: 3
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: pstake
      app.kubernetes.io/name: pstake-validator
  template:
    metadata:
      annotations:
        quality: release
        role: api-gateway
        sla: high
        tier: gateway
      labels:
        app.kubernetes.io/instance: pstake
        app.kubernetes.io/type: pstake-validator
        app.kubernetes.io/name: pstake-validator
        app.kubernetes.io/version: '0.1'
    spec:
      imagePullSecrets:
        - name: test-docker-creds
      containers:
        - name: validator
          image: persistenceone/pstake
          imagePullPolicy: Always
          command:
            - bash
            - "-c"
            - |
              # Starting
              pstaked start --home $PSTAKE_DIR
          lifecycle:
            postStart:
              exec:
                command:
                  - bash
                  - "-c"
                  - |
                    bash /scripts/create-val.sh
          resources:
            limits:
              cpu: "1"
              memory: "1G"
            requests:
              cpu: "0.5"
              memory: "500M"
          volumeMounts:
            - mountPath: /pstaked
              name: pstake-validator-pv-storage
            - mountPath: /configs
              name: addresses
            - mountPath: /scripts
              name: pstake-scripts
        - name: exposer-app
          image: persistenceone/exposer:pstake
          imagePullPolicy: Always
          command: [ "exposer" ]
          resources:
            limits:
              cpu: "0.1"
              memory: "100M"
            requests:
              cpu: "0.1"
              memory: "100M"
          volumeMounts:
            - mountPath: /pstaked
              name: pstake-validator-pv-storage
      volumes:
        - name: addresses
          configMap:
            name: test-addresses-pstake
        - name: pstake-scripts
          configMap:
            name: pstake-scripts

  volumeClaimTemplates:
    - metadata:
        name: pstake-validator-pv-storage
      spec:
        storageClassName: do-block-storage
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
---
