k8s/pstake/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-pstake
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
spec:
  tls:
    # This secret must exist beforehand
    # The cert must also contain the subj-name grpctest.dev.mydomain.com
    # https://github.com/kubernetes/ingress-nginx/blob/master/docs/examples/PREREQUISITES.md#tls-certificates
    - secretName: cloudflare-tls
      hosts:
        - rpc.devnet.persistence.pstake.finance
  rules:
    - host: rpc.devnet.persistence.pstake.finance
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pstake-genesis
                port:
                  number: 26657
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-pstake-grpc
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  tls:
    - secretName: cloudflare-tls
      hosts:
        - grpc.devnet.persistence.pstake.finance
  rules:
    - host: grpc.devnet.persistence.pstake.finance
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pstake-genesis
                port:
                  number: 9090
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-pstake-rest
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - secretName: cloudflare-tls
      hosts:
        - rest.devnet.persistence.pstake.finance
  rules:
    - host: rest.devnet.persistence.pstake.finance
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pstake-genesis
                port:
                  number: 1317
  ingressClassName: nginx
